feat(cors): configured CORS policy to allow frontend access